[train v2][16/n] Add Anyscale patches for elastic configuration + e2e elastic test (#717)
* Adds an end to end elastic training test.
* Creates a factory method for the scaling policy.
    * The Anyscale version of the factory method will check if the number of workers is a tuple of min/max and create an `ElasticScalingPolicy` if so.
    * The OSS version will just always return a fixed scaling policy.
* Creates an Anyscale runtime version of the `ScalingConfig`, which allows tuple input for `num_workers`, and adds properties like `min_workers`/`max_workers`.

---------

Signed-off-by: Justin Yu <justinvyu@anyscale.com>
Signed-off-by: Hongpeng Guo <hpguo@anyscale.com>
Co-authored-by: Hongpeng Guo <hpguo@anyscale.com>

--- a/python/ray/train/v2/BUILD
+++ b/python/ray/train/v2/BUILD
@@ -9,6 +9,7 @@ py_test(
     srcs = ["tests/test_accelerator_utils.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -17,6 +18,7 @@ py_test(
     srcs = ["tests/test_checkpoint_handler.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -25,6 +27,7 @@ py_test(
     srcs = ["tests/test_controller.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -33,6 +36,7 @@ py_test(
     srcs = ["tests/test_data_parallel_trainer.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -41,6 +45,16 @@ py_test(
     srcs = ["tests/test_failure_policy.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+)
+
+py_test(
+    name = "test_lightning_integration",
+    size = "medium",
+    srcs = ["tests/test_lightning_integration.py"],
+    tags = ["exclusive", "team:ml", "train_v2"],
+    deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -49,6 +63,7 @@ py_test(
     srcs = ["tests/test_persistence.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -57,6 +72,7 @@ py_test(
     srcs = ["tests/test_result.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -65,6 +81,7 @@ py_test(
     srcs = ["tests/test_storage.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -73,6 +90,16 @@ py_test(
     srcs = ["tests/test_sync_actor.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+)
+
+py_test(
+    name = "test_torch_trainer",
+    size = "small",
+    srcs = ["tests/test_torch_trainer.py"],
+    tags = ["exclusive", "team:ml", "train_v2"],
+    deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 py_test(
@@ -81,4 +108,5 @@ py_test(
     srcs = ["tests/test_worker_group_v2.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
