--- a/python/ray/dag/BUILD
+++ b/python/ray/dag/BUILD
@@ -73,6 +73,7 @@ py_test(
 py_test_module_list(
   files = [
     "tests/experimental/test_torch_tensor_dag.py",
+    "tests/experimental/test_detect_deadlock_dag.py",
   ],
   size = "medium",
   tags = ["exclusive", "accelerated_dag", "no_windows", "team:core"],
