[ci] fix pip-compile dependency job + upgrade ipywidgets (#45870)
- Use the oss_ci_base_test to compile the dependency list; need to
install miniconda into the base_test
- Upgrade ipywidgets, need to resolve a lot of dependency issues
- Rebuild the byod_requirements for release test as well

Test:
- CI

---------

Signed-off-by: can <can@anyscale.com>

--- a/python/requirements_compiled.txt
+++ b/python/requirements_compiled.txt
@@ -1055,7 +1055,9 @@ nevergrad==0.4.3.post7
 ninja==1.11.1.1
     # via deepspeed
 notebook==6.5.7
-    # via jupyterlab
+    # via
+    #   -r /home/ubuntu/ray/ci/../python/requirements/ml/tune-test-requirements.txt
+    #   jupyterlab
 notebook-shim==0.2.3
     # via nbclassic
     # via vsphere-automation-sdk
