[train v2][18/n] Remove threaded actor and go back to self-managed python threads (#723)
* Reduces max concurrent tasks of the train worker actors to 1.
* Re-introduces the self-managed training thread that we had in the old
Ray Train.
* Changes the implementation of `RayTrainWorker.poll_status` to return the
worker status directly, which is much more natural.

---------

Signed-off-by: Justin Yu <justinvyu@anyscale.com>

--- a/python/ray/train/v2/BUILD
+++ b/python/ray/train/v2/BUILD
@@ -94,6 +94,15 @@ py_test(
 )
 
 py_test(
+    name = "test_thread_runner",
+    size = "small",
+    srcs = ["tests/test_thread_runner.py"],
+    tags = ["exclusive", "team:ml", "train_v2"],
+    deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+)
+
+py_test(
     name = "test_torch_trainer",
     size = "small",
     srcs = ["tests/test_torch_trainer.py"],
@@ -103,9 +112,9 @@ py_test(
 )
 
 py_test(
-    name = "test_worker_group_v2",
+    name = "test_worker_group",
     size = "small",
-    srcs = ["tests/test_worker_group_v2.py"],
+    srcs = ["tests/test_worker_group.py"],
     tags = ["exclusive", "team:ml", "train_v2"],
     deps = ["//:ray_lib", ":conftest"],
     env = {"RAY_TRAIN_V2_ENABLED": "1"},
