--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -158,7 +158,7 @@ py_test(
     tags = ["team:rllib", "exclusive", "learning_tests", "learning_tests_cartpole", "learning_tests_discrete", "torch_only"],
     size = "large",
     srcs = ["tuned_examples/appo/cartpole_appo.py"],
-    args = ["--as-test", "--enable-new-api-stack"]
+    args = ["--as-test", "--enable-new-api-stack", "--num-gpus=1"]
 )
 py_test(
     name = "learning_tests_multi_agent_cartpole_appo",
@@ -166,7 +166,7 @@ py_test(
     tags = ["team:rllib", "exclusive", "learning_tests", "learning_tests_cartpole", "learning_tests_discrete", "torch_only"],
     size = "large",
     srcs = ["tuned_examples/appo/multi_agent_cartpole_appo.py"],
-    args = ["--as-test", "--enable-new-api-stack"]
+    args = ["--as-test", "--enable-new-api-stack", "--num-gpus=1"]
 )
 
 #@OldAPIStack
@@ -336,7 +336,7 @@ py_test(
     tags = ["team:rllib", "exclusive", "learning_tests", "learning_tests_cartpole", "learning_tests_discrete", "torch_only"],
     size = "large",
     srcs = ["tuned_examples/impala/cartpole_impala.py"],
-    args = ["--as-test", "--enable-new-api-stack"]
+    args = ["--as-test", "--enable-new-api-stack", "--num-gpus=1"]
 )
 py_test(
     name = "learning_tests_cartpole_impala_gpu",
@@ -368,7 +368,7 @@ py_test(
     tags = ["team:rllib", "exclusive", "learning_tests", "learning_tests_cartpole", "learning_tests_discrete", "torch_only"],
     size = "large",
     srcs = ["tuned_examples/impala/multi_agent_cartpole_impala.py"],
-    args = ["--as-test", "--enable-new-api-stack", "--num-agents=2", "--num-cpus=5"]
+    args = ["--as-test", "--enable-new-api-stack", "--num-agents=2", "--num-gpus=1", "--num-cpus=5"]
 )
 py_test(
     name = "learning_tests_multi_agent_cartpole_impala_gpu",
