Revert "Revert "[serve] turn on compact scheduling by default" (#702)" (#706)
Revert "Revert "[serve] turn on compact scheduling by default" (#702)"

This reverts commit 53919f4fb3fd4b0a856cf04c6aea5b18d0384bf6.

The reason why the golden notebook train tune serve release test was
failing is because the test uses a 2-node cluster, runs 2 serve
replicas, and runs ray tasks on both nodes that queries
`localhost:8000`. However with compact scheduling turned on, both serve
replicas get scheduled onto one node, so there is no http proxy running
on the second node -> when the ray tasks on that second node query
`localhost:8000`, it can't connect.

To fix that, use custom resources to explicitly schedule one replica per
node.

--- a/python/ray/anyscale/serve/BUILD
+++ b/python/ray/anyscale/serve/BUILD
@@ -13,10 +13,10 @@ py_library(
     srcs = ["tests/conftest.py"],
 )
 
-# Test compact scheduling
+# Test without compact scheduling
 py_test_module_list(
   name_suffix="_with_compact_scheduling",
-  env={"RAY_SERVE_USE_COMPACT_SCHEDULING_STRATEGY": "1"},
+  env={"RAY_SERVE_USE_COMPACT_SCHEDULING_STRATEGY": "0"},
   files = [
     "tests/test_deployment_scheduler.py",
     "tests/test_draining.py",
