Fix errors that occurred during testing
Signed-off-by: liuxsh9 <liuxiaoshuang4@huawei.com>

--- a/dashboard/client/package.json
+++ b/dashboard/client/package.json
@@ -48,6 +48,11 @@
   "resolutions": {
     "@types/react": "16.9.26"
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!lowlight)/"
+    ]
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
