--- a/.buildkite/lint.rayci.yml
+++ b/.buildkite/lint.rayci.yml
@@ -23,6 +23,7 @@ steps:
   - label: ":lint-roller: lint: {{matrix}}"
     tags:
       - oss
+      - any_change
     key: lint-medium
     instance_type: medium
     depends_on:
