--- a/.buildkite/lint.rayci.yml
+++ b/.buildkite/lint.rayci.yml
@@ -23,7 +23,7 @@ steps:
   - label: ":lint-roller: lint: {{matrix}}"
     tags:
       - oss
-      - any_change
+      - lint
     key: lint-medium
     instance_type: medium
     depends_on:
