--- a/.buildkite/release-automation/wheels.rayci.yml
+++ b/.buildkite/release-automation/wheels.rayci.yml
@@ -12,8 +12,10 @@ steps:
     job_env: forge
     instance_type: small_branch
     commands:
+      - export RAY_VERSION="$RAY_VERSION"
+      - source .buildkite/release-automation/set_ray_version.sh
       - bazel run //ci/ray_ci/automation:upload_wheels_pypi -- 
-        --ray_version="$RAY_VERSION"
+        --ray_version="$$RAY_VERSION"
         --commit_hash="$BUILDKITE_COMMIT"
         --pypi_env=test
 
@@ -36,6 +38,7 @@ steps:
       - "3.9"
       - "3.10"
       - "3.11"
+      - "3.12"
 
   - block: "Download & validate Ray wheels from TestPyPI Linux arm64"
     key: block-validate-linux-arm64-wheels
@@ -57,6 +60,7 @@ steps:
       - "3.9"
       - "3.10"
       - "3.11"
+      - "3.12"
 
   - block: "Download & validate Ray wheels from TestPyPI Mac"
     key: block-validate-macos-wheels
