--- a/.buildkite/release-automation/pre_release.rayci.yml
+++ b/.buildkite/release-automation/pre_release.rayci.yml
@@ -7,6 +7,7 @@ steps:
     instance_type: small_branch
     commands:
       - bazel run //ci/ray_ci/automation:weekly_green_metric -- --check
+      - exit 1
 
   - label: "Check commit hash"
     key: check-commit-hash
