--- a/.buildkite/release-automation/wheels.rayci.yml
+++ b/.buildkite/release-automation/wheels.rayci.yml
@@ -13,10 +13,10 @@ steps:
     instance_type: small_branch
     commands:
       - export RAY_VERSION="$RAY_VERSION"
+      - export RAY_COMMIT="$RAY_COMMIT"
       - source .buildkite/release-automation/set-ray-version.sh
       - bazel run //ci/ray_ci/automation:upload_wheels_pypi -- 
-        --ray_version="$$RAY_VERSION"
-        --commit_hash="$BUILDKITE_COMMIT"
+        --ray_version="$$RAY_VERSION" --commit_hash="$$RAY_COMMIT"
         --pypi_env=test
 
   - block: "Download & validate Ray wheels from TestPyPI Linux x86_64"
@@ -95,7 +95,9 @@ steps:
     job_env: forge
     instance_type: small_branch
     commands:
+      - export RAY_VERSION="$RAY_VERSION"
+      - export RAY_COMMIT="$RAY_COMMIT"
+      - source .buildkite/release-automation/set-ray-version.sh
       - bazel run //ci/ray_ci/automation:upload_wheels_pypi -- 
-        --ray_version="$RAY_VERSION" 
-        --commit_hash="$BUILDKITE_COMMIT" 
+        --ray_version="$$RAY_VERSION" --commit_hash="$$RAY_COMMIT"
         --pypi_env=prod
