[ci] trim down github actions permission scope
only allow writing to issues

Signed-off-by: Lonnie Liu <lonnie@anyscale.com>

--- a/.github/workflows/external-code-affected.yml
+++ b/.github/workflows/external-code-affected.yml
@@ -9,7 +9,8 @@ on: pull_request_target
 
 jobs:
   check-changes:
-    permissions: write-all
+    permissions:
+      issues: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
