[train v2][17/n] Port over torch release tests + add elastic `TorchTrainer` release test (#721)
## Summary

Create elastic e2e test to verify the stability of v2 under elastic scenario
1. Create a cluster of 12 GPU on 3 4GPU nodes
2. Terminate several of the nodes for a few times while the training functions run over the cluster
3. Verify that the program exits gracefully and as expected

Manual Release test run: https://buildkite.com/anyscale/runtime-release/builds/809 

---------

Signed-off-by: Justin Yu <justinvyu@anyscale.com>
Signed-off-by: Hongpeng Guo <hpguo@anyscale.com>
Co-authored-by: Hongpeng Guo <hpguo@anyscale.com>

--- a/release/release_runtime_tests.yaml
+++ b/release/release_runtime_tests.yaml
@@ -140,3 +140,30 @@
       frequency: manual
       cluster:
         cluster_compute: multi_node_ckpt_training_compute_config_gce.yaml
+
+###############
+# Train tests
+###############
+- name: train_elastic_e2e_with_node_killing
+  group: Train tests
+  working_dir: anyscale/train/elastic_e2e
+
+  frequency: weekly
+  team: ml
+
+  cluster:
+    byod:
+      type: gpu
+    cluster_compute: compute_gpu_aws.yaml
+
+  run:
+    timeout: 4800
+    script: RAY_TRAIN_V2_ENABLED=1 python torch_elastic_e2e.py run --num-epochs 60
+
+    wait_for_nodes:
+      num_nodes: 1
+
+  variations:
+    - __suffix__: aws
+
+  alert: default
