[ray client] set core team the only owner (#46416)
other individual owners have moved on to other projects.

Signed-off-by: Lonnie Liu <lonnie@anyscale.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -59,7 +59,7 @@
 /cpp/include/ray @SongGuyang @raulchen @kfstorm @ray-project/ray-core
 
 # Ray Client
-/src/ray/protobuf/ray_client.proto @ameerhajali @ckw017 @ray-project/ray-core
+/src/ray/protobuf/ray_client.proto @ray-project/ray-core
 
 # Runtime Env
 # TODO(SongGuyang): Add new items to guarantee runtime env API compatibility in multiple languages.
