--- a/python/ray/train/v2/BUILD
+++ b/python/ray/train/v2/BUILD
@@ -112,6 +112,15 @@ py_test(
 )
 
 py_test(
+    name = "test_v2_api",
+    size = "small",
+    srcs = ["tests/test_v2_api.py"],
+    tags = ["exclusive", "team:ml", "train_v2"],
+    deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+)
+
+py_test(
     name = "test_worker_group",
     size = "small",
     srcs = ["tests/test_worker_group.py"],
