[rllib] skip rllib gpu test on premerge
too flaky, and taking too long time.

Signed-off-by: Lonnie Liu <lonnie@anyscale.com>

--- a/.buildkite/rllib.rayci.yml
+++ b/.buildkite/rllib.rayci.yml
@@ -107,6 +107,7 @@ steps:
     tags: 
       - rllib
       - gpu
+      - skip-on-premerge
     parallelism: 3
     instance_type: gpu
     commands:
