--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,8 +7,8 @@
 #
 # We will remove CODEOWNER when the test infra is synced with upstream and more
 # mature
-anyscale/ci @aslonnie @can-anyscale
-anyscale/docker @aslonnie @can-anyscale
+anyscale/ci @aslonnie @can-anyscale @khluu
+anyscale/docker @aslonnie @can-anyscale @khluu
 anyscale/go @aslonnie @lanbochen-anyscale @hckuo
 
 # Data team
