--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,5 +12,5 @@ anyscale/docker @aslonnie @can-anyscale @khluu
 anyscale/go @aslonnie @lanbochen-anyscale @hckuo
 
 # Data team
-/python/ray/anyscale/data @bveeramani @c21 @amogkam @scottjlee @raulchen
-/release/anyscale/data @bveeramani @c21 @amogkam @scottjlee @raulchen
+/python/ray/anyscale/data @bveeramani @c21 @scottjlee @raulchen
+/release/anyscale/data @bveeramani @c21 @scottjlee @raulchen
