--- a/.buildkite/windows.rayci.yml
+++ b/.buildkite/windows.rayci.yml
@@ -110,8 +110,8 @@ steps:
         --test-env=USERPROFILE
     depends_on: windowsbuild
 
-  - label: "flaky :windows: tests"
-    key: windows_flaky_tests
+  - label: "flaky :windows: core tests"
+    key: windows_core_flaky_tests
     tags: skip-on-premerge
     job_env: WINDOWS
     instance_type: windows
@@ -125,6 +125,15 @@ steps:
         --test-env=CI="1"
         --test-env=RAY_CI_POST_WHEEL_TESTS="1"
         --test-env=USERPROFILE
+    depends_on: windowsbuild
+    soft_fail: true
+
+  - label: "flaky :windows: serverless tests"
+    key: windows_serverless_flaky_tests
+    tags: skip-on-premerge
+    job_env: WINDOWS
+    instance_type: windows
+    commands:
       - bazel run //ci/ray_ci:test_in_docker -- //python/ray/tests/... serverless
         --skip-ray-installation
         --except-tags no_windows
@@ -134,6 +143,15 @@ steps:
         --test-env=CI="1"
         --test-env=RAY_CI_POST_WHEEL_TESTS="1"
         --test-env=USERPROFILE
+    depends_on: windowsbuild
+    soft_fail: true
+
+  - label: "flaky :windows: serve tests"
+    key: windows_serve_flaky_tests
+    tags: skip-on-premerge
+    job_env: WINDOWS
+    instance_type: windows
+    commands:
       - bazel run //ci/ray_ci:test_in_docker -- //python/ray/serve/... serve
         --skip-ray-installation
         --except-tags no_windows
