Fixed data path in BUILD.
Signed-off-by: simonsays1980 <simon.zehnder@gmail.com>

--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -1545,7 +1545,7 @@ py_test(
     size = "small",
     srcs = ["offline/tests/test_offline_data.py"],
     data = [
-        "tests/data/pendulum/small.json",
+        "tests/data/cartpole/cartpole-v1_large",
     ],
 )
 
