update iter path
Signed-off-by: Scott Lee <sjl@anyscale.com>

--- a/python/ray/data/BUILD
+++ b/python/ray/data/BUILD
@@ -21,7 +21,7 @@ py_library(
 py_test_module_list(
     files = glob(["tests/block_batching/test_*.py"]),
     size = "medium",
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:data", "exclusive"],
     deps = ["//:ray_lib", ":conftest"],
 )
 
