--- a/.gitignore
+++ b/.gitignore
@@ -216,6 +216,7 @@ workflow_data/
 
 # Jupyter Notebooks
 **/.ipynb_checkpoints/
+.virtual_documents/
 
 ### Added by Hedron's Bazel Compile Commands Extractor: https://github.com/hedronvision/bazel-compile-commands-extractor
 # The external link: Differs on Windows vs macOS/Linux, so we can't check it in. The pattern needs to not have a trailing / because it's a symlink on macOS/Linux.
