--- a/doc/requirements-doc.txt
+++ b/doc/requirements-doc.txt
@@ -15,6 +15,7 @@ sphinx-jsonschema==1.19.1
 sphinx-sitemap==2.5.1
 sphinxcontrib-redoc==1.6.0
 sphinx-remove-toctrees==0.0.3
+readthedocs-sphinx-search==0.3.2
 sphinx_design==0.5.0
 pydata-sphinx-theme==0.14.1
 autodoc_pydantic==2.2.0
