--- a/doc/BUILD
+++ b/doc/BUILD
@@ -1,6 +1,8 @@
 load("//bazel:python.bzl", "py_test_run_all_subdirectory")
 load("//bazel:python.bzl", "py_test_run_all_notebooks")
 load("//bazel:python.bzl", "doctest")
+load("@py_deps_buildkite//:requirements.bzl", ci_require = "requirement")
+load("@rules_python//python:defs.bzl", "py_test")
 
 exports_files(["test_myst_doc.py"])
 
@@ -351,12 +353,28 @@ py_test(
 py_test_run_all_subdirectory(
     size = "enormous",
     include = ["external/*.py"],
-    exclude = [],
+    exclude = ["external/test_hashes.py"],
     extra_srcs = [],
     tags = [
         "exclusive",
         "external",
         "team:ml",
+    ],
+)
+
+py_test(
+    name = "test_external_hashes",
+    srcs = ["external/test_hashes.py"],
+    data = glob(
+        ["external/*.py"],
+        exclude = ["external/test_hashes.py"],
+    ),
+    exec_compatible_with = ["//:hermetic_python"],
+    main = "external/test_hashes.py",
+    tags = ["team:ml"],
+    deps = [
+        ci_require("pytest"),
+        ci_require("bazel-runfiles"),
     ],
 )
 
