[test] skip dask tests on Python 3.12+
dask has to be upgraded to 2024.6.0 for successful builds.
But on Ray side, we don't have any plan to support dask version later than 2022.10.1.
So we will keep dask as is for <= Python 3.11, and skip dask tests on Python 3.12+.

Signed-off-by: hongchaodeng <hongchaodeng1@gmail.com>

--- a/python/requirements_compiled.txt
+++ b/python/requirements_compiled.txt
@@ -387,7 +387,8 @@ cython==0.29.37
     # via
     #   -r /ray/ci/../python/requirements/test-requirements.txt
     #   gpy
-dask==2022.10.1
+dask==2022.10.1; python_version < '3.12'
+dask==2024.6.0; python_version >= '3.12'
     # via
     #   -r /ray/ci/../python/requirements/ml/data-requirements.txt
     #   distributed
@@ -425,7 +426,8 @@ dill==0.3.7
     #   pymoo
 distlib==0.3.7
     # via virtualenv
-distributed==2022.10.1
+distributed==2022.10.1; python_version < '3.12'
+distributed==2024.6.0; python_version >= '3.12'
     # via dask
 dm-control==1.0.12
     # via -r /ray/ci/../python/requirements/ml/rllib-test-requirements.txt
