--- a/doc/source/tune/examples/BUILD
+++ b/doc/source/tune/examples/BUILD
@@ -23,6 +23,7 @@ py_test_run_all_notebooks(
         "pbt_transformers.ipynb",  # Transformers uses legacy Tune APIs.
         "horovod_simple.ipynb",  # CI do not have Horovod
         "tune-aim.ipynb",  # CI does not have `aim`
+        "bohb_example.ipynb",  # CI does not have bohb requirements
    ],
     tags = [
         "exclusive",
