--- a/python/ray/tune/BUILD
+++ b/python/ray/tune/BUILD
@@ -513,7 +513,7 @@ py_test(
     size = "medium",
     srcs = ["examples/bohb_example.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive", "example"]
+    tags = ["team:ml", "exclusive", "example", "manual"]
 )
 
 py_test(
