Revert "[RFC][python 3.12] upgrade pytorch  (#46256)"
This reverts commit d26b2efb117472bb4aae1ccbe0a67a87fef7f4e3.

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -1099,7 +1099,7 @@
     byod:
       runtime_env:
         - TRAIN_PLACEMENT_GROUP_TIMEOUT_S=2000
-      type: cu123
+      type: gpu
     cluster_compute: train/compute_tpl_aws.yaml
 
   run:
