--- a/doc/BUILD
+++ b/doc/BUILD
@@ -271,9 +271,7 @@ py_test_run_all_subdirectory(
 py_test_run_all_subdirectory(
     size = "large",
     include = ["source/train/doc_code/*.py"],
-    exclude = [
-        "source/train/doc_code/hvd_trainer.py",  # CI do not have Horovod
-    ],
+    exclude = [],
     extra_srcs = [],
     tags = [
         "exclusive",
@@ -427,8 +425,7 @@ doctest(
             # GPU
             "source/train/user-guides/data-loading-preprocessing.rst",
             "source/train/user-guides/using-gpus.rst",
-            "source/train/horovod.rst",  # CI do not have Horovod
-        ]
+        ],
     ),
     tags = ["team:ml"],
 )
