[serve] Fix `test_replica_memory_growth` by re-disabling tracing support (#816)
Tracing was previously disabled for this test via env var in the bazel
`BUILD` file, but a recent merge incidentally enabled it:
https://github.com/anyscale/runtime/commit/bcbf73ae70d2435cab0bd1bc9b63412e2ce30d6b

We should fix the unreachable objects with tracing enabled, but for now
we can re-disable tracing to make master green.

---------

Signed-off-by: Edward Oakes <ed.nmi.oakes@gmail.com>

--- a/python/ray/serve/tests/BUILD
+++ b/python/ray/serve/tests/BUILD
@@ -150,6 +150,7 @@ py_test_module_list(
 
 py_test_module_list(
     size = "enormous",
+    env = {"ANYSCALE_TRACING_EXPORTER_IMPORT_PATH": ""},
     files = [
         "test_deploy_app.py",
         "test_metrics.py",
